--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
-    "aws-amplify": "^0.3.0",
+    "aws-amplify": "<=0.3.0",
     "express": "^4.16.3",
     "razzle": "^0.8.14",
     "react": "^16.3.1",
