--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "razzle": "^0.8.14",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "unstated": "^2.1.1"
   }
 }
